deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oikos-page
  namespace: oikos
  labels:
    app: oikos-page
spec:
  selector:
    app: oikos-page
  ports:
    - name: http
      port: 80
      targetPort: http
