deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oikos
  namespace: oikos
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - oikos.netlsr.net
      secretName: oikos-netlsr-net-tls
  rules:
    - host: oikos.netlsr.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: oikos-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oikos-page
                port:
                  number: 80
